Fixes for AccountController. Added SecurityDefinitions for swagger.
