# src/components/requests/account.go
@@ -5,13 +5,13 @@ import (
 	"github.com/beego/beego/v2/core/validation"
 )
 
-type AccountRequest struct {
+type AccountSingUpRequest struct {
 	request
 	Username string `valid:"Required"`
 	Password string `valid:"Required"`
 }
 
-func (r *AccountRequest) Valid(v *validation.Validation) {
+func (r *AccountSingUpRequest) Valid(v *validation.Validation) {
 	query := models.Find(&models.Account{Username: r.Username}, "id").Where("username = ?")
 	result, err := models.Raw(query, r.Username).Exec()
 	if err != nil {
@@ -23,8 +23,14 @@ func (r *AccountRequest) Valid(v *validation.Validation) {
 	}
 }
 
+type AccountSignInRequest struct {
+	request
+	Username string `valid:"Required"`
+	Password string `valid:"Required"`
+}
+
 type AccountUpdateRequest struct {
-	AccountRequest
+	AccountSingUpRequest
 	Username string
 	Password string
 }
