# src/models/account.go
@@ -2,7 +2,6 @@ package models
 
 import (
 	"app/src/components/auth"
-	"app/src/components/requests"
 	"time"
 
 	"github.com/beego/beego/v2/client/orm"
@@ -10,7 +9,7 @@ import (
 
 type Account struct {
 	model
-	Id            int       `orm:"column(id);auto;pk"`
+	Id            int64     `orm:"column(id);auto;pk"`
 	Username      string    `orm:"column(username);unique"`
 	Password      string    `orm:"column(password)"`
 	Type          int       `orm:"column(type);" default:"1"`
@@ -29,12 +28,34 @@ func init() {
 	orm.RegisterModel(new(Account))
 }
 
-func (m *Account) Register(data requests.AccountRequest) error {
-	password, err := auth.HashPassword(data.Password)
+func (m *Account) Login(password string) (string, error) {
+	err := Get(m, "Username")
+	if err != nil {
+		return "", auth.ErrorUsernameOrPasswordIncorrect
+	}
+
+	if err = auth.CheckPasswordHash(password, m.Password); err != nil {
+		return "", auth.ErrorUsernameOrPasswordIncorrect
+	}
+
+	token, err := auth.CreateAccessToken(m.Id)
+	if err != nil {
+		return "", err
+	}
+	m.IsNeedRelogin = false
+	_, err = Update(m, "IsNeedRelogin")
+	if err != nil {
+		return "", err
+	}
+	return token, nil
+}
+
+func (m *Account) Register(username, password string) error {
+	password, err := auth.HashPassword(password)
 	if err != nil {
 		return err
 	}
-	m.Username = data.Username
+	m.Username = username
 	m.Password = password
 	_, err = Insert(m)
 	return err
